// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsSwitchItem - Snapshots > matches snapshot when checked 1`] = `
<div
  class="flex w-full items-center justify-between gap-3"
  data-testid="container"
>
  <div
    class="flex flex-1 flex-col items-start gap-2"
    data-testid="container"
  >
    <label
      class="text-sm text-foreground leading-5 font-medium"
      data-testid="typography"
      for="test-switch"
    >
      Test Setting
    </label>
  </div>
  <button
    aria-checked="true"
    class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent px-0.5 transition-colors focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 bg-muted data-[state=checked]:bg-brand"
    data-state="checked"
    id="test-switch"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="pointer-events-none block size-4 rounded-full bg-background shadow-sm ring-0 transition-transform data-[state=checked]:translate-x-3 data-[state=unchecked]:translate-x-0"
      data-state="checked"
    />
  </button>
</div>
`;

exports[`SettingsSwitchItem - Snapshots > matches snapshot when disabled 1`] = `
<div
  class="flex w-full items-center justify-between gap-3"
  data-testid="container"
>
  <div
    class="flex flex-1 flex-col items-start gap-2"
    data-testid="container"
  >
    <label
      class="text-sm text-foreground leading-5 font-medium"
      data-testid="typography"
      for="test-switch"
    >
      Test Setting
    </label>
  </div>
  <button
    aria-checked="false"
    class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent px-0.5 transition-colors focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 bg-muted data-[state=checked]:bg-brand"
    data-disabled=""
    data-state="unchecked"
    disabled=""
    id="test-switch"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="pointer-events-none block size-4 rounded-full bg-background shadow-sm ring-0 transition-transform data-[state=checked]:translate-x-3 data-[state=unchecked]:translate-x-0"
      data-disabled=""
      data-state="unchecked"
    />
  </button>
</div>
`;

exports[`SettingsSwitchItem - Snapshots > matches snapshot with default props 1`] = `
<div
  class="flex w-full items-center justify-between gap-3"
  data-testid="container"
>
  <div
    class="flex flex-1 flex-col items-start gap-2"
    data-testid="container"
  >
    <label
      class="text-sm text-foreground leading-5 font-medium"
      data-testid="typography"
      for="test-switch"
    >
      Test Setting
    </label>
  </div>
  <button
    aria-checked="false"
    class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent px-0.5 transition-colors focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 bg-muted data-[state=checked]:bg-brand"
    data-state="unchecked"
    id="test-switch"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="pointer-events-none block size-4 rounded-full bg-background shadow-sm ring-0 transition-transform data-[state=checked]:translate-x-3 data-[state=unchecked]:translate-x-0"
      data-state="unchecked"
    />
  </button>
</div>
`;
